--- a/day0/qr-code-component-main/style.css
+++ b/day0/qr-code-component-main/style.css
@@ -1,18 +1,54 @@
-/* .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); } */
+@font-face {
+    font-family: outfit-bold;
+    src: url(fonts/static/Outfit-Bold.ttf);
+}
+
+@font-face {
+    font-family: outfit-light;
+    src: url(fonts/static/Outfit-Light.ttf);
+}
 
 body {
     margin: 0;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    height: 100vh; /* Example: Full viewport height */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: hsl(212, 45%, 89%);
 }
 
 .card {
-    width: 400px;
-    height: 600px;
-    border: 1px solid red;
-    border-radius: 20px;
+    width: 265px;
+    height: 430px;
+    border-radius: 18px;
+    padding: 15px;
+    background-color: hsl(0, 0%, 100%);
+    text-align: center;
+    box-shadow: 0px 0px 50px 0px rgba(221, 216, 216, 0.8);
 }
 
+.qr {
+    width: 265px;
+    height: 275px;
+    border-radius: 10px;
+    background-image: url(images/image-qr-code.png);
+    background-repeat: no-repeat;
+    background-size: 275px;
+}
+
+.p1 {
+    color: #272A37;
+    font-family: outfit-bold;
+    font-size: 21px;
+    font-weight: 700;
+    margin-top: 18px;
+    margin-bottom: 10px;
+}
+
+.p2 {
+    color: #978B82;
+    font-family: outfit-light;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 15px;
+}
